html+css created

--- a/Unicorn AB.html
+++ b/Unicorn AB.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>     
 <html>
 <head>
+
     <meta title="Unicorn AB - Esport utomhus">
     <meta charset="utf-8"> <!--åäö-->
     <meta name="Authors" content="Alexandra Feller, Hanna Björkman, Linda Torrång och Lukas Häggström">
     
+    <link rel="stylesheet" type="text/css" href="Unicorn AB.css">
 </head>
+
 <body>  
-<p align="center"><h1>E-sport</h1><br>
-Tänk Dreamhack</p> 
+    <div class="header">
+        <p><h1>E-Sport</h1><br>
+        Tänk Dreamhack</p> 
+        <br>
+    </div>
 
 </body>
 </html>
