--- a/Demo.html
+++ b/Demo.html
@@ -33,6 +33,9 @@
                 <div class="header">
        <p>Här kommer statistiken</p>
     </div>
+    <div> 
+        <iframe width="800" height="600" src="https://app.powerbi.com/view?r=eyJrIjoiN2NlNzk0YTEtOTNjMy00NWQ3LTljYWMtZmEzOTg5ZDUzNDFjIiwidCI6IjIwZTllNjU4LWQ4NDQtNGQ5Yy1hMGI3LTM2Mzg5ZDcxNzM2ZiIsImMiOjh9" frameborder="0" allowFullScreen="true"></iframe>
+    </div>
 
 
 
