--- a/Teknik.html
+++ b/Teknik.html
@@ -23,7 +23,7 @@
                       <a href= "Unicorn AB.html">HEM</a>
                         <a href="OmBranschen.html">OM BRANSCHEN</a> 
                         <a href="Uppdrag.html">VÅRT UPPDRAG</a> 
-                        <a href="Svarigheter.html">SVÅRIGHETER & MÖJLIGHETER</a> 
+                        <a href="Svarigheter.html">UTMANINGAR & MÖJLIGHETER</a> 
                         <a href="Teknik.html">VALD TEKNIK</a>
                         <a href="Demo.html">DEMONSTRATION</a>
                     
