--- a/Unicorn AB.html
+++ b/Unicorn AB.html
@@ -11,22 +11,20 @@
 
 <body class='background'>
 
-    <div class="menubg"> 
+    <div class="imgcenter"> 
         <img src="https://scontent.farn2-1.fna.fbcdn.net/v/t1.0-9/28379670_300628510463004_997984573086396822_n.jpg?_nc_cat=106&_nc_ht=scontent.farn2-1.fna&oh=66ef6ab4a454aa53e12e310558cd7d0b&oe=5D4FC558" width="15%" height="15%">     
     </div>
 
-    <div class="menubg">
         <div class="menu">
             <ul class="menulist">
-                    <li class="active"><a href= "Unicorn AB.html">HEM</a></li>
-                    <li><a href="OmBranschen.html">OM BRANSCHEN</a> </li>
-                    <li><a href="Uppdrag.html">VÅRT UPPDRAG</a> </li>
-                    <li><a href="Svarigheter.html">UTMANINGAR & MÖJLIGHETER</a> </li>
-                    <li><a href="Teknik.html">VALD TEKNIK</a></li>
-                    <li><a href="Demo.html">DEMONSTRATION</a></li>
+                <li><a class="active" href= "Unicorn AB.html">HEM</a></li>
+                <li><a href="OmBranschen.html">OM BRANSCHEN</a> </li>
+                <li><a href="Uppdrag.html">VÅRT UPPDRAG</a> </li>
+                <li><a href="Svarigheter.html">UTMANINGAR & MÖJLIGHETER</a> </li>
+                <li><a href="Teknik.html">VALD TEKNIK</a></li>
+                <li><a href="Demo.html">DEMONSTRATION</a></li>
             </ul>
         </div> 
-    </div>
 
     <div>
         <h1 class="Huvudrubrik">OPEN SKY</h1>
@@ -34,8 +32,8 @@
         <h2 class="underrubrik">Din utomhusarena för e-sport</h2> 
     </div>
 
-    <div class="menubg" style="padding:5%;">
-        <img src="https://image.redbull.com/rbcom/010/2015-04-08/1331715804779_2/0100/0/1/inside-esl%E2%80%99s-esports-cinema-invasion.jpg" width="50%" height="50%">
+    <div class="bg2" style="padding:5%;">
+        <!--<img src="https://image.redbull.com/rbcom/010/2015-04-08/1331715804779_2/0100/0/1/inside-esl%E2%80%99s-esports-cinema-invasion.jpg" width="50%" height="50%">-->
     </div>
 
 
