--- a/Uppdrag.html
+++ b/Uppdrag.html
@@ -15,16 +15,14 @@
         <img src="https://scontent.farn2-1.fna.fbcdn.net/v/t1.0-9/28379670_300628510463004_997984573086396822_n.jpg?_nc_cat=106&_nc_ht=scontent.farn2-1.fna&oh=66ef6ab4a454aa53e12e310558cd7d0b&oe=5D4FC558" width="15%" height="15%">     
     </div>
 
-    <div class="menu">
-        <ul class="menulist">
-            <li><a href= "Unicorn AB.html">HEM</a></li>
-            <li><a href="OmBranschen.html">OM BRANSCHEN</a> </li>
-            <li><a class="active" href="Uppdrag.html">VÅRT UPPDRAG</a> </li>
-            <li><a href="Svarigheter.html">UTMANINGAR & MÖJLIGHETER</a> </li>
-            <li><a href="Teknik.html">VALD TEKNIK</a></li>
-            <li><a href="Demo.html">DEMONSTRATION</a></li>
-        </ul>
-    </div> 
+    <ul class="menulist">
+        <li><a href= "Unicorn AB.html">HEM</a></li>
+        <li><a class="active" href="OmBranschen.html">OM BRANSCHEN</a> </li>
+        <li><a href="Uppdrag.html">VÅRT UPPDRAG</a> </li>
+        <li><a href="Svarigheter.html">UTMANINGAR & MÖJLIGHETER</a> </li>
+        <li><a href="Teknik.html">VALD TEKNIK</a></li>
+        <li><a href="Demo.html">DEMONSTRATION</a></li>
+    </ul>
 
     <div class="paragrafBg">
         <h3 class="underrubrik">Vårt uppdrag: </h3>
