Fixed a menu "active" designations

--- a/Svarigheter.html
+++ b/Svarigheter.html
@@ -17,9 +17,9 @@
     
         <ul class="menulist">
             <li><a href= "Unicorn AB.html">HEM</a></li>
-            <li><a class="active" href="OmBranschen.html">OM BRANSCHEN</a> </li>
+            <li><a href="OmBranschen.html">OM BRANSCHEN</a> </li>
             <li><a href="Uppdrag.html">VÅRT UPPDRAG</a> </li>
-            <li><a href="Svarigheter.html">UTMANINGAR & MÖJLIGHETER</a> </li>
+            <li><a class="active" href="Svarigheter.html">UTMANINGAR & MÖJLIGHETER</a> </li>
             <li><a href="Teknik.html">VALD TEKNIK</a></li>
             <li><a href="Demo.html">DEMONSTRATION</a></li>
         </ul>    
