Navbar and scrollbar fixes

--- a/OmBranschen.html
+++ b/OmBranschen.html
@@ -24,15 +24,13 @@
         <li><a href="Demo.html">DEMONSTRATION</a></li>
     </ul>
 
-    <div>
-        <h1 class="Huvudrubrik">Om Branschen</h1>
-    </div>
-
-             
     <div class="paragrafBg">
+        <h3 class="underrubrik">Om Branschen</h3>
+
         <p class="paragrafer">Här kommer det att komma information om branschen</p>
     </div>
 
+    <iframe width="1200" height="600" src="https://app.powerbi.com/view?r=eyJrIjoiZWViYTViNTItNWRlZS00ZTI3LWE1NWQtODQ4ZDYxOWU0NmY3IiwidCI6IjIwZTllNjU4LWQ4NDQtNGQ5Yy1hMGI3LTM2Mzg5ZDcxNzM2ZiIsImMiOjh9" frameborder="0" allowFullScreen="true"></iframe>
 
 
 </body>
