--- a/Unicorn AB.html
+++ b/Unicorn AB.html
@@ -27,11 +27,11 @@
     <div>
         <h1 class="Huvudrubrik">OPEN SKY</h1>
         <h2 class="Huvudrubrik">ESPORTS</h2>
-        <h2 class="underrubrik">Din utomhusarena för e-sport</h2> 
+        <h2 class="underrubrik" style="margin-bottom:0;">Din utomhusarena för e-sport</h2> 
     </div>
 
     <!--<div class="bg2" style="padding:5%;">-->
-        <img src="https://image.redbull.com/rbcom/010/2015-04-08/1331715804779_2/0100/0/1/inside-esl%E2%80%99s-esports-cinema-invasion.jpg" width="100%">
+    <img src="https://image.redbull.com/rbcom/010/2015-04-08/1331715804779_2/0100/0/1/inside-esl%E2%80%99s-esports-cinema-invasion.jpg" width="100%">
 
 
 
