--- a/Uppdrag.html
+++ b/Uppdrag.html
@@ -25,11 +25,10 @@
     </ul>
 
     <div class="paragrafBg">
-        <h3 class="underrubrik">Vårt uppdrag: </h3>
+        <h3 class="underrubrik">Vårt uppdrag</h3>
     
         <p class="paragrafer">
         Att rekommendera en plats i Sverige där ett utomhus e-sport event kan arrangeras 
-        <br>
         <br>
         <br>
         <i>Vår kund vill utifrån data enkelt kunna se var i Sverige de ska etablera sig och varför samt vilken/vilka månader som är optimala för att visa esport utomhus </i>
