--- a/Demo.html
+++ b/Demo.html
@@ -30,7 +30,7 @@
         </div>
 
         <div> 
-            <iframe width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=44063040-f5f3-4773-b6b3-bcfb06d7667a&groupId=3a46ec1f-3a22-4713-b4a5-b2dee1f19928&autoAuth=true&ctid=20e9e658-d844-4d9c-a0b7-36389d71736f" frameborder="0" allowFullScreen="true"></iframe>
+            <iframe width="1140" height="541.25" src="https://app.powerbi.com/view?r=eyJrIjoiNzAzYTNjMTQtZTViMy00YTllLWIzNzctNjJjNWUzYzhkYzYzIiwidCI6IjIwZTllNjU4LWQ4NDQtNGQ5Yy1hMGI3LTM2Mzg5ZDcxNzM2ZiIsImMiOjh9" frameborder="0" allowFullScreen="true"></iframe>
         </div>
 
     </body>
