--- a/Demo.html
+++ b/Demo.html
@@ -26,7 +26,17 @@
 
                 
         <div class="paragrafBg">
-            <p class="paragrafer">Här kommer statistiken</p>
+            <p class="paragrafer">
+                <ul>
+                <li>Var i Sverige är det högst medeltemperatur?</li>
+                <br>
+                <li>Var i Sverige är det minst nederbörd?</li>
+                <br>
+                <li>Under vilken tidsperiod?</li>
+                <br>
+                <li>Var är uppkopplingsmöjligheterna snabbast?</li>
+                </ul>
+            </p>
         </div>
 
         <div> 
