--- a/Svarigheter.html
+++ b/Svarigheter.html
@@ -30,9 +30,9 @@
                     <h2 class='underrubrik'>Utmaningar</h2>
                     <p class='paragrafer'>
                         <ul>
-                            <li>Ung bransch</li>
-                            <li>Tillgänglighet</li>
-                            <li>Demografi</li>
+                            <li>Södermanlands län</li>
+                            <li>Målgrupp</li>
+                            <li>Esportens struktur</li>
                         </ul>
                     </p>   
                 </div>
@@ -44,8 +44,8 @@
                     <p class='paragrafer'>
                         <ul>
                             <li>Ung bransch</li>
-                            <li>Många möjligheter</li>
-                            <li>Fler fördelar</li>
+                            <li>Tillgänglighet</li>
+                            <li>Spelschema</li>
                         </ul>
                     </p>
                 </div>
