--- a/Demo.html
+++ b/Demo.html
@@ -26,6 +26,7 @@
 
                 
         <div class="paragrafBg">
+            <h3 class="underrubrik">Frågeställningar</h3>
             <p class="paragrafer">
                 <ul>
                 <li>Var i Sverige är det högst medeltemperatur?</li>
@@ -34,7 +35,7 @@
                 <br>
                 <li>Under vilken tidsperiod?</li>
                 <br>
-                <li>Var är uppkopplingsmöjligheterna snabbast?</li>
+                <li>Var är uppkopplingstillgängligheten bäst?</li>
                 </ul>
             </p>
         </div>
