--- a/Uppdrag.html
+++ b/Uppdrag.html
@@ -32,6 +32,15 @@
         <br>
         <br>
         <i>Vår kund vill utifrån data enkelt kunna se var i Sverige de ska etablera sig och varför samt vilken/vilka månader som är optimala för att visa esport utomhus </i>
+        <br>
+        <br>
+        <strong>Frågeställningar</strong>
+        <ul class="nobullet">
+            <li>Var i Sverige är det högst medeltemperatur?</li>
+            <li>Var i Sverige är det minst nederbörd?</li>
+            <li>Under vilken tidsperiod?</li>
+            <li>Var är uppkopplingstillgängligheten bäst?</li>
+        </ul>
         </p>
     </div>
 
