--- a/OmBranschen.html
+++ b/OmBranschen.html
@@ -25,9 +25,23 @@
     </ul>
 
     <div class="paragrafBg">
-        <h3 class="underrubrik">Om Branschen</h3>
+        <h3 class="underrubrik">Esport</h3>
 
-        <p class="paragrafer">Här kommer det att komma information om branschen</p>
+        <ul class="nobullet">
+            <li>Ung Bransch</li>
+            <li>Globala event</li>
+            <li>Utvecklare och organisatörer</li>  
+        </ul>
+
+        <h3 class="underrubrik">Evenemang</h3>
+
+        <ul class="nobullet">
+            <li>Världens största LAN</li>
+            <li>DreamHack Crew</li>
+            <li>Mer än ett LAN</li>
+        </ul>
+
+        <p clas="paragrafer"></p>
     </div>
 
     <iframe width="1200" height="600" src="https://app.powerbi.com/view?r=eyJrIjoiZWViYTViNTItNWRlZS00ZTI3LWE1NWQtODQ4ZDYxOWU0NmY3IiwidCI6IjIwZTllNjU4LWQ4NDQtNGQ5Yy1hMGI3LTM2Mzg5ZDcxNzM2ZiIsImMiOjh9" frameborder="0" allowFullScreen="true"></iframe>
