Last HTML/CSS Updateplz

--- a/Teknik.html
+++ b/Teknik.html
@@ -28,33 +28,46 @@
         <div class="paragrafBg">
             <p class="paragrafer">
             <h3 class="underrubrikTeknik">Trello</h3>
-            <ul><li>Brainstorming</li>
-            <li>Scrum/Kanban (uppgifter & process)</li></ul>
+                <ul>
+                    <li>Brainstorming</li>
+                    <li>Scrum/Kanban (uppgifter & process)</li>
+                </ul>
 
             <h3 class="underrubrikTeknik">Datakällor</h3>
-            <ul><li>SMHI - medeltemperatur, nederbörd och vind</li>
-                <ul><li>Fokus på perioden maj-sept, 2016-2018</li></ul>
-            
-            <li>PTS statistikportal - Bredbandstäckning</li></ul>
+                <ul>
+                    <li>SMHI - medeltemperatur, nederbörd och vind</li>
+                    <ul>
+                        <li>Fokus på perioden maj-sept, 2016-2018</li>
+                    </ul>
+                    <li>PTS statistikportal - Bredbandstäckning</li>
+                </ul>
             
             <h3 class="underrubrikTeknik">Olika datakvalitet</h3>
-            <ul><li>Bredband - fokus på hög hastighet och stabil anslutning: 1GB/s eller fiber</li>
-            <li>Medeltemp och nederbörd - gemensamma stationer med null</li>
-            <li>Vind - för stor andel null-värden (Utesluten pga. dålig data)</li>
-            </ul>
+                <ul>
+                    <li>Bredband - fokus på hög hastighet och stabil anslutning: 1GB/s eller fiber</li>
+                    <li>Medeltemp och nederbörd - gemensamma stationer med null</li>
+                    <li>Vind - för stor andel null-värden (Utesluten pga. dålig data)</li>
+                </ul>
+
             <h3 class="underrubrikTeknik">Inläsning/Transformering</h3>
-            <ul><li>PDF-konvertering i Power BI</li>
-            <li>Övriga tabeller: Månadsnummer (sortering), Län och Kommun.</li>
-            <li>Mest transformering i Power BI, ex:</li>
-            <ul><li>Datatyper</li>
-            <li>Delade/konkatenerade kolumner</li>
-           <li> Index/nycklar</li></ul>
-            <li>Samlade data i SQL - arbeta från samma dataset</li>
-           <ul><li>Bättre för Unicorn AB i framtiden</li></ul> 
-            <li>Skapat hemsida - HTML, CSS och JS</li>
-            <li>Iframe Power BI</li></ul>
-
-
+                <ul>
+                    <li>PDF-konvertering i Power BI</li>
+                    <li>Övriga tabeller: Månadsnummer (sortering), Län och Kommun.</li>
+                    <li>Mest transformering i Power BI, ex:</li>
+                        <ul>
+                            <li>Datatyper</li>
+                            <li>Delade/konkatenerade kolumner</li>
+                            <li> Index/nycklar</li>
+                        </ul>
+                    <li>Samlade data i SQL - arbeta från samma dataset</li>
+                        <ul>
+                            <li>Bättre för Unicorn AB i framtiden</li>
+                        </ul> 
+                    <li>Skapat hemsida - HTML, CSS och JS</li>
+                    <li>Iframe Power BI</li></ul>
+            <div class="imgcenter"> 
+                <img src="ETL2.PNG" style="width:80%;">
+            </div>
             </p>
         </div>
 
