--- a/Teknik.html
+++ b/Teknik.html
@@ -51,18 +51,20 @@
 
             <h3 class="underrubrikTeknik">Inläsning/Transformering</h3>
                 <ul>
-                    <li>PDF-konvertering i Power BI</li>
+                    <li>Väder:PDF-konvertering i Power BI</li>
+                    <li>Bredband: CSV till SQL</li>
                     <li>Övriga tabeller: Månadsnummer (sortering), Län och Kommun.</li>
-                    <li>Mest transformering i Power BI, ex:</li>
+                    <li>Samlade data i SQL - arbeta från samma dataset</li>
+                        <ul>
+                            <li>Bättre för Unicorn AB i framtiden</li>
+                        </ul> 
+                        <li>Mest transformering i Power BI, ex:</li>
                         <ul>
                             <li>Datatyper</li>
                             <li>Delade/konkatenerade kolumner</li>
                             <li> Index/nycklar</li>
                         </ul>
-                    <li>Samlade data i SQL - arbeta från samma dataset</li>
-                        <ul>
-                            <li>Bättre för Unicorn AB i framtiden</li>
-                        </ul> 
+                    
                     <li>Skapat hemsida - HTML, CSS och JS</li>
                     <li>Iframe Power BI</li></ul>
             <div class="imgcenter"> 
