--- a/Svarigheter.html
+++ b/Svarigheter.html
@@ -16,20 +16,20 @@
         </div>
     
         <ul class="menulist">
-            <li><a href= "Unicorn AB.html">HEM</a></li>
-            <li><a href="OmBranschen.html">OM BRANSCHEN</a> </li>
-            <li><a href="Uppdrag.html">VÅRT UPPDRAG</a> </li>
-            <li><a class="active" href="Svarigheter.html">UTMANINGAR & MÖJLIGHETER</a> </li>
-            <li><a href="Teknik.html">VALD TEKNIK</a></li>
-            <li><a href="Demo.html">DEMONSTRATION</a></li>
-        </ul>    
+                <li><a href= "Unicorn AB.html">HEM</a></li>
+                <li><a href="Uppdrag.html">VÅRT UPPDRAG</a> </li>            
+                <li><a href="OmBranschen.html">OM BRANSCHEN</a> </li>
+                <li><a href="Teknik.html">VALD TEKNIK</a></li>
+                <li><a href="Demo.html">DEMONSTRATION</a></li>
+                <li><a class="active" href="Svarigheter.html">UTMANINGAR & MÖJLIGHETER</a> </li>
+        </ul>  
 
         <div class="row">
             <div class="textcol">
                 <div class="colBg">
                     <h2 class='underrubrik'>Utmaningar</h2>
                     <p class='paragrafer'>
-                        <ul>
+                        <ul class="nobullet">
                             <li>Södermanlands län</li>
                             <li>Målgrupp</li>
                             <li>Esportens struktur</li>
@@ -42,7 +42,7 @@
                 <div class="colBg">
                     <h2 class='underrubrik'>Möjligheter</h2>
                     <p class='paragrafer'>
-                        <ul>
+                        <ul class="nobullet">
                             <li>Ung bransch</li>
                             <li>Tillgänglighet</li>
                             <li>Spelschema</li>
