--- a/Uppdrag.html
+++ b/Uppdrag.html
@@ -16,9 +16,18 @@
     </div>
 
     <ul class="menulist">
+            <li><a href= "Unicorn AB.html">HEM</a></li>
+            <li><a class="active" href="Uppdrag.html">VÅRT UPPDRAG</a> </li>            
+            <li><a href="OmBranschen.html">OM BRANSCHEN</a> </li>
+            <li><a href="Teknik.html">VALD TEKNIK</a></li>
+            <li><a href="Demo.html">DEMONSTRATION</a></li>
+            <li><a href="Svarigheter.html">UTMANINGAR & MÖJLIGHETER</a> </li>
+    </ul>
+
+    <ul class="menulist">
         <li><a href= "Unicorn AB.html">HEM</a></li>
         <li><a href="OmBranschen.html">OM BRANSCHEN</a> </li>
-        <li><a class="active" href="Uppdrag.html">VÅRT UPPDRAG</a> </li>
+       
         <li><a href="Svarigheter.html">UTMANINGAR & MÖJLIGHETER</a> </li>
         <li><a href="Teknik.html">VALD TEKNIK</a></li>
         <li><a href="Demo.html">DEMONSTRATION</a></li>
